--- a/public/main.css
+++ b/public/main.css
@@ -1,4 +1,24 @@
 * {
-
   box-sizing: border-box;
 }
+
+html,
+body {
+  margin: 0;
+  min-height: 100vh;
+}
+
+#projects {
+  padding: 20px;
+  border: 10px solid red;
+}
+
+#todos {
+  padding: 50px;
+  border: 10px solid blue;
+}
+
+
+.todo.priority-1 { background: #FF9B73; }
+.todo.priority-2 { background: #B692FE; }
+.todo.priority-3 { background: #E4EE90; }
